# ChangeLog for media-video/qc-usb
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/qc-usb/ChangeLog,v 1.3 2004/06/25 00:48:38 agriffis Exp $

  24 Sep 2003; Alastair Tse <liquidx@gentoo.org> qc-usb-0.5.1.ebuild:
  add IUSE

*qc-usb-0.5.1 (06 Jul 2003)

  06 Jul 2003; Alastair Tse <liquidx@gentoo.org> qc-usb-0.5.1.ebuild:
  re-write of qce-ga, improves speed and framerates
