@@ -1,0 +1,1 @@
+MD5 fa5cc6ae7f5d405f4e62d2b3c38a223d qc-usb-0.6.0.tar.gz 127079
