@@ -1,6 +1,11 @@
 # ChangeLog for media-video/qc-usb
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/qc-usb/ChangeLog,v 1.3 2004/06/25 00:48:38 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/qc-usb/ChangeLog,v 1.4 2004/07/24 05:17:10 liquidx Exp $
+
+*qc-usb-0.6.0 (24 Jul 2004)
+
+  24 Jul 2004; Alastair Tse <liquidx@gentoo.org> +qc-usb-0.6.0.ebuild:
+  version bump (finally). now supports 2.6 kernel (#38312)
 
   24 Sep 2003; Alastair Tse <liquidx@gentoo.org> qc-usb-0.5.1.ebuild:
   add IUSE
